@@ -293,7 +293,7 @@ if(KRITA_QT)
 					-no-feature-kmap2qmap -no-feature-pixeltool
 					-no-feature-qdbus -no-feature-qev
 					-no-feature-qtattributionsscanner -no-feature-qtdiag
-					-no-feature-qtplugininfo
+					-no-feature-qtplugininfo -no-feature-accessibility
 					-skip qt3d
 					-skip qtactiveqt
 					-skip qtcanvas3d
@@ -385,6 +385,7 @@ else()
 						-opensource -confirm-license
 						-nomake tests -nomake examples
 						-no-sql-mysql -no-sql-odbc -no-sql-sqlite -no-sql-psql
+						-no-feature-accessibility
 						-qt-libjpeg -qt-libpng -qt-harfbuzz
 						${BASE_FLAGS}
 					DEBUG
